<resources>
    <string name="app_name">Miner2android</string>
    <string name="refresh">Refresh</string>
    <string name="delete_error">Delete error</string>
    <string name="deleted">Deleted</string>
    <string name="name">Name</string>
    <string name="external_ip">IP</string>
    <string name="port">Port</string>
    <string name="internal_ip">Internal IP</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cantsavedata">Can\'t save data. Exception</string>
    <string name="add_pc">Add PC</string>
    <string name="settings">Settings</string>
    <string name="no_gpu_info">Havn\'t gpu info</string>
    <string name="no_sys_info">Havn\'t system info</string>
    <string name="param_hashrate">Hashrate</string>
    <string name="param_hashrate_hour">Hashrate hour</string>
    <string name="param_hashrate_minute">Hashrate minute</string>
    <string name="param_hashrate2">Hashrate 2</string>
    <string name="param_hashrate_hour2">Hashrate hour 2</string>
    <string name="param_hashrate_minute2">Hashrate minute 2</string>
    <string name="param_name">Name</string>
    <string name="param_vendor">Vendor</string>
    <string name="param_power">Power limit</string>
    <string name="param_fan_speed">Fan</string>
    <string name="param_temperature_gpu">Temperature</string>
    <string name="param_efficiency">Efficiency</string>
    <string name="param_efficiency2">Efficiency 2</string>
    <string name="param_shares">Shares</string>
    <string name="param_used_ram">Ram used %</string>
    <string name="param_cpu_temp">CPU temperature</string>
    <string name="param_cpu_freq">CPU frequency</string>
    <string name="param_cpu_fan">CPU Fan</string>

    <string name="open">Open menu</string>
    <string name="close">Close menu</string>

    <string name="gateway_PC_IP">Gateway IP</string>
    <string name="gateway_PC_Port">Gateway Port</string>
    <string name="gateway_Pass">Gateway Password</string>
    <string name="need_enter_an_ip">You need to enter an IP(or internal IP in your local network)</string>
    <string name="need_enter_an_iip">You need to enter an internal IP(or external IP</string>
    <string name="need_enter_port">You need to enter a port</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_as_gateway">Use as gateway (connect by this PC)</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="gpu_total">GPU Total:</string>
    <string name="hashrate">Hashrate:</string>
    <string name="system_info">System info</string>
    <string name="hello">Add your rig by clicking on the button below</string>
    <string name="name_unique">Name must be unique</string>
    <string name="fan_auto">Fan AUTO</string>
    <string name="apply">Apply</string>
    <string name="sys_params">System</string>
    <string name="no_responce">"No response within </string>
    <string name="below">below</string>
    <string name="above">above</string>
    <string name="load">Load</string>
    <string name="save_restore_settings">Save/Restore settings</string>
    <string name="include_pcs_limits_for_notification">Include PCs, limits for notification</string>
    <string name="open_item">Open</string>
    <string name="clear_limits">Clear Limits</string>
    <string name="clear_limits_ask">Clear limits?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="name_or_ticker">Type Name or Ticker</string>
    <string name="active">Active</string>
    <string name="price_marketcup">Price/MarketCup</string>
    <string name="change_24h_1h">Change 24h/1h</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="circulating">Circulating:</string>
    <string name="total_supply">Total supply:</string>
    <string name="max_supply">Max supply:</string>
    <string name="unknown_miner_state">Unknown miner state</string>
    <string name="error_get_miner_state">Error get miner state</string>
    <string name="error_set_miner_state">Error set miner state</string>
    <string name="miner_state">Miner state</string>
    <string name="stop">Stopped</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="running">Running</string>
</resources>