<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    android:background="@color/pcitembg"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/excange_rates"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bottom_top_background"
            android:gravity="center"
            android:text="@string/exchange_rates"
            android:textAllCaps="true"
            android:textColor="@color/bottomTopBar" />

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_lock_24"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            tools:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_top_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/active"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/price_marketcup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/change_24h_1h" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="TextView"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottomSheetRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="7"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/bottom_sheet_item"
        tools:orientation="vertical"
        tools:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <AutoCompleteTextView
        android:id="@+id/autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="2"
        android:hint="@string/name_or_ticker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:dropDownAnchor="@id/bottomSheetRecycler"/>


</LinearLayout>