<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTintMode="src_in"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_restore_settings"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_baseline_sd_storage_24" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_baseline_sd_storage_24" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

            <TextView
                android:id="@+id/tv_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/load"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>