<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_carVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Power Limit" />

            <TextView
                android:id="@+id/tv_powerLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_powerlimit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:progress="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/param_fan_speed" />

            <TextView
                android:id="@+id/tv_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_fan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:progress="0" />

        <Switch
            android:id="@+id/sw_fan_mode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/fan_auto" />

        <Button
            android:id="@+id/b_apply"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/addpcbuttonBG"
            android:text="@string/apply" />

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@color/black"
            android:scrollbars="vertical"
            android:textColor="@color/gray"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>