<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@color/white_transp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ExIP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/external_ip"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ExIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_transp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/port"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_transp"
                    android:text="5000" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_useasgateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_as_gateway" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_InIP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/external_ip"
                android:visibility="gone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_InIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_transp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_inport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/port"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_inport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_transp"
                    android:text="5100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_transp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_applogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/mining" />

                <TextView
                    android:id="@+id/tv_appname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Miner2android"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menuPCRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"

                    tools:itemCount="6"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/menu_pc_item"
                    tools:orientation="vertical"
                    tools:scrollbars="vertical">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/tv_menucat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="" />

                <LinearLayout
                    android:id="@+id/ll_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="go_to_settings"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_menu_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        app:srcCompat="@drawable/ic_baseline_settings_24" />

                    <TextView
                        android:id="@+id/tv_menu_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/settings"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>